--- a/time-code/convert-edt-to-local-time/index.html
+++ b/time-code/convert-edt-to-local-time/index.html
@@ -78,15 +78,17 @@
             <button id="convertBtn" class="primary" type="button" style="width: 100%;">Convert EDT to Local
                 Time</button>
 
-            <table id="resultTbl" style="display:none; width: 100%; margin-top: 24px;">
-                <thead>
-                    <tr>
-                        <th>Time zone</th>
-                        <th>Output Format</th>
-                    </tr>
-                </thead>
-                <tbody id="resultBody"></tbody>
-            </table>
+            <div class="table-container">
+                <table id="resultTbl" style="display:none; width: 100%; margin-top: 24px;">
+                    <thead>
+                        <tr>
+                            <th>Time zone</th>
+                            <th>Output Format</th>
+                        </tr>
+                    </thead>
+                    <tbody id="resultBody"></tbody>
+                </table>
+            </div>
         </div>
 
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
