--- a/time-zone/est-to-ist/index.html
+++ b/time-zone/est-to-ist/index.html
@@ -79,16 +79,18 @@
 
             <button onclick="showAll()" class="primary" style="margin-top: 24px;">Calculate India Standard Time (IST) Time</button>
 
-            <table id="resultsTable" style="display:none; width: 100%; margin-top: 24px;">
-                <thead>
-                    <tr>
-                        <th>Time Zone</th>
-                        <th>Local Time</th>
-                        <th>Difference</th>
-                    </tr>
-                </thead>
-                <tbody id="resultsBody"></tbody>
-            </table>
+            <div class="table-container">
+                <table id="resultsTable" style="display:none; width: 100%; margin-top: 24px;">
+                    <thead>
+                        <tr>
+                            <th>Time Zone</th>
+                            <th>Local Time</th>
+                            <th>Difference</th>
+                        </tr>
+                    </thead>
+                    <tbody id="resultsBody"></tbody>
+                </table>
+            </div>
         </div>
 
         <div class="card seo-content" style="margin-top: 40px; text-align: left; padding: 32px;">
