--- a/currency.html
+++ b/currency.html
@@ -113,32 +113,34 @@
         select your base and target currencies, and get your result without any hidden fees or complicated menus.</p>
 
       <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Quick Reference: Popular Conversions</h3>
-      <table style="margin-top: 0; margin-bottom: 32px;">
-        <thead>
-          <tr>
-            <th>USD to EUR</th>
-            <th>EUR to GBP</th>
-            <th>USD to NOK</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>$10 &asymp; €9.20</td>
-            <td>€10 &asymp; £8.50</td>
-            <td>$10 &asymp; 105 NOK</td>
-          </tr>
-          <tr>
-            <td>$50 &asymp; €46.00</td>
-            <td>€50 &asymp; £42.50</td>
-            <td>$50 &asymp; 525 NOK</td>
-          </tr>
-          <tr>
-            <td>$100 &asymp; €92.00</td>
-            <td>€100 &asymp; £85.00</td>
-            <td>$100 &asymp; 1050 NOK</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-container">
+        <table style="margin-top: 0; margin-bottom: 32px;">
+          <thead>
+            <tr>
+              <th>USD to EUR</th>
+              <th>EUR to GBP</th>
+              <th>USD to NOK</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>$10 &asymp; €9.20</td>
+              <td>€10 &asymp; £8.50</td>
+              <td>$10 &asymp; 105 NOK</td>
+            </tr>
+            <tr>
+              <td>$50 &asymp; €46.00</td>
+              <td>€50 &asymp; £42.50</td>
+              <td>$50 &asymp; 525 NOK</td>
+            </tr>
+            <tr>
+              <td>$100 &asymp; €92.00</td>
+              <td>€100 &asymp; £85.00</td>
+              <td>$100 &asymp; 1050 NOK</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
       <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Top Conversions</h3>
       <div class="internal-links-cluster" style="display: flex; flex-wrap: wrap; gap: 12px; margin-bottom: 32px;">
@@ -222,15 +224,24 @@
         return;
       }
 
+      const resultEl = document.getElementById('result');
+      const lastUpdatedEl = document.getElementById('lastUpdated');
+
+      resultEl.classList.add('skeleton-loader');
+      resultEl.textContent = "Loading calculation...";
+      lastUpdatedEl.textContent = "";
+
       try {
         const res = await axios.get(`/.netlify/functions/convert?from=${from}&to=${to}&amount=${amount}`);
         const converted = res.data.result.toFixed(2);
         const date = res.data.date || "unknown";
-        document.getElementById('result').textContent = `${amount} ${from} = ${converted} ${to}`;
-        document.getElementById('lastUpdated').textContent = `Exchange rate last updated: ${date}`;
+        resultEl.classList.remove('skeleton-loader');
+        resultEl.textContent = `${amount} ${from} = ${converted} ${to}`;
+        lastUpdatedEl.textContent = `Exchange rate last updated: ${date}`;
       } catch (err) {
-        document.getElementById('result').textContent = "Could not retrieve exchange rate. Please try again later.";
-        document.getElementById('lastUpdated').textContent = "";
+        resultEl.classList.remove('skeleton-loader');
+        resultEl.textContent = "Could not retrieve exchange rate. Please try again later.";
+        lastUpdatedEl.textContent = "";
       }
     };
   </script>
