--- a/currency/aud-to-usd/index.html
+++ b/currency/aud-to-usd/index.html
@@ -112,36 +112,38 @@
                 conversion increments, or use the exact calculator for specific amounts.</p>
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Quick Reference: AUD to USD</h3>
-            <table style="margin-top: 0; margin-bottom: 32px;">
-                <thead>
-                    <tr>
-                        <th>AUD Amount</th>
-                        <th>USD Amount</th>
-                    </tr>
-                </thead>
-                <tbody id="quickRefTable">
-                    <tr>
-                        <td>10 AUD</td>
-                        <td class="calc-ref" data-amt="10">Loading...</td>
-                    </tr>
-                    <tr>
-                        <td>50 AUD</td>
-                        <td class="calc-ref" data-amt="50">Loading...</td>
-                    </tr>
-                    <tr>
-                        <td>100 AUD</td>
-                        <td class="calc-ref" data-amt="100">Loading...</td>
-                    </tr>
-                    <tr>
-                        <td>500 AUD</td>
-                        <td class="calc-ref" data-amt="500">Loading...</td>
-                    </tr>
-                    <tr>
-                        <td>1000 AUD</td>
-                        <td class="calc-ref" data-amt="1000">Loading...</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-container">
+                <table style="margin-top: 0; margin-bottom: 32px;">
+                    <thead>
+                        <tr>
+                            <th>AUD Amount</th>
+                            <th>USD Amount</th>
+                        </tr>
+                    </thead>
+                    <tbody id="quickRefTable">
+                        <tr>
+                            <td>10 AUD</td>
+                            <td class="calc-ref" data-amt="10">Loading...</td>
+                        </tr>
+                        <tr>
+                            <td>50 AUD</td>
+                            <td class="calc-ref" data-amt="50">Loading...</td>
+                        </tr>
+                        <tr>
+                            <td>100 AUD</td>
+                            <td class="calc-ref" data-amt="100">Loading...</td>
+                        </tr>
+                        <tr>
+                            <td>500 AUD</td>
+                            <td class="calc-ref" data-amt="500">Loading...</td>
+                        </tr>
+                        <tr>
+                            <td>1000 AUD</td>
+                            <td class="calc-ref" data-amt="1000">Loading...</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <h3 style="font-size: 1.2rem; margin-bottom: 16px;">Related Currency Tools</h3>
             <div class="internal-links-cluster" style="margin-bottom: 32px;">
@@ -225,20 +227,29 @@
             const from = fromSelect.value;
             const to = toSelect.value;
 
+            const resultEl = document.getElementById('result');
+            const lastUpdatedEl = document.getElementById('lastUpdated');
+
             if (!amount || amount <= 0) {
                 alert("Please enter a valid amount");
                 return;
             }
 
+            resultEl.classList.add('skeleton-loader');
+            resultEl.textContent = "Loading calculation...";
+            lastUpdatedEl.textContent = "";
+
             try {
                 const res = await axios.get(`/.netlify/functions/convert?from=${from}&to=${to}&amount=${amount}`);
                 const converted = res.data.result.toFixed(2);
                 const date = res.data.date || "unknown";
-                document.getElementById('result').textContent = `${amount} ${from} = ${converted} ${to}`;
-                document.getElementById('lastUpdated').textContent = `Exchange rate last updated: ${date}`;
+                resultEl.classList.remove('skeleton-loader');
+                resultEl.textContent = `${amount} ${from} = ${converted} ${to}`;
+                lastUpdatedEl.textContent = `Exchange rate last updated: ${date}`;
             } catch (err) {
-                document.getElementById('result').textContent = "Could not retrieve exchange rate. Please try again later.";
-                document.getElementById('lastUpdated').textContent = "";
+                resultEl.classList.remove('skeleton-loader');
+                resultEl.textContent = "Could not retrieve exchange rate. Please try again later.";
+                lastUpdatedEl.textContent = "";
             }
         };
     </script>
