--- a/scripts/crypto-template.html
+++ b/scripts/crypto-template.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>[FROM_NAME] to [TO_NAME] Portfolio Tracker – Convert [FROM_TICKER] to [TO_TICKER]</title>
+    <title>Live [FROM_NAME] to [TO_NAME] Portfolio Tracker ([YEAR]) | Crypto Converter</title>
     <meta name="description"
         content="Track your [FROM_NAME] ([FROM_TICKER]) investments. Convert [FROM_TICKER] to [TO_NAME] ([TO_TICKER]) and calculate exact historic profit and loss instantly." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -85,7 +85,7 @@
         </div>
     </header>
     <main class="container">
-        <h1>[FROM_NAME] to [TO_NAME] Tracker</h1>
+        <h1>Live [FROM_NAME] to [TO_NAME] Crypto Tracker</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate historic profit and loss for
             [FROM_TICKER] to [TO_TICKER].</p>
 
