--- a/scripts/timecode-template.html
+++ b/scripts/timecode-template.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Convert [FORMAT] to Local Time – [NAME] Translator</title>
-    <meta name="description"
-        content="Paste a time abbreviation like '2pm [FORMAT]' and convert [NAME] ([FORMAT]) to your local time instantly." />
+    <title>Translate [FORMAT] to Local Time ([YEAR]) | [NAME] Converter</title>
+    content="Paste a time abbreviation like '2pm [FORMAT]' and convert [NAME] ([FORMAT]) to your local time instantly."
+    />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -61,7 +61,7 @@
     </header>
     <main>
         <div class="card">
-            <h1 id="page-title">Convert [FORMAT] to Local Time</h1>
+            <h1 id="page-title">Latest [FORMAT] to Local Time Converter</h1>
             <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Smart [NAME] ([FORMAT]) natural
                 language translator.</p>
 
