--- a/scripts/timezone-template.html
+++ b/scripts/timezone-template.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>[FROM_NAME] to [TO_NAME] Converter – Live Time Zone Comparison</title>
+    <title>Current [FROM_NAME] to [TO_NAME] Converter ([YEAR]) | Time Zone Comparison</title>
     <meta name="description"
         content="Convert [FROM_NAME] to [TO_NAME] instantly. Compare schedules between [FROM_VAR] and [TO_VAR] with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -60,7 +60,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">[FROM_NAME] to [TO_NAME] Converter</h1>
+        <h1 id="page-title">Current [FROM_NAME] to [TO_NAME] Time Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between [FROM_NAME]
             and [TO_NAME].</p>
 
