--- a/time-code/convert-edt-to-local-time/index.html
+++ b/time-code/convert-edt-to-local-time/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Convert EDT to Local Time – Eastern Daylight Time Translator</title>
-    <meta name="description"
-        content="Paste a time abbreviation like '2pm EDT' and convert Eastern Daylight Time (EDT) to your local time instantly." />
+    <title>Translate EDT to Local Time (2026) | Eastern Daylight Time Converter</title>
+    content="Paste a time abbreviation like '2pm EDT' and convert Eastern Daylight Time (EDT) to your local time instantly."
+    />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -61,7 +61,7 @@
     </header>
     <main>
         <div class="card">
-            <h1 id="page-title">Convert EDT to Local Time</h1>
+            <h1 id="page-title">Latest EDT to Local Time Converter</h1>
             <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Smart Eastern Daylight Time (EDT) natural
                 language translator.</p>
 
