--- a/time-code/convert-gmt-to-local-time/index.html
+++ b/time-code/convert-gmt-to-local-time/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Convert GMT to Local Time – Greenwich Mean Time Translator</title>
-    <meta name="description"
-        content="Paste a time abbreviation like '2pm GMT' and convert Greenwich Mean Time (GMT) to your local time instantly." />
+    <title>Translate GMT to Local Time (2026) | Greenwich Mean Time Converter</title>
+    content="Paste a time abbreviation like '2pm GMT' and convert Greenwich Mean Time (GMT) to your local time instantly."
+    />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -61,7 +61,7 @@
     </header>
     <main>
         <div class="card">
-            <h1 id="page-title">Convert GMT to Local Time</h1>
+            <h1 id="page-title">Latest GMT to Local Time Converter</h1>
             <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Smart Greenwich Mean Time (GMT) natural
                 language translator.</p>
 
