--- a/time-zone/gmt-to-est/index.html
+++ b/time-zone/gmt-to-est/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>London (GMT/BST) to Eastern Time (ET) Converter – Live Time Zone Comparison</title>
+    <title>Current London (GMT/BST) to Eastern Time (ET) Converter (2026) | Time Zone Comparison</title>
     <meta name="description"
         content="Convert London (GMT/BST) to Eastern Time (ET) instantly. Compare schedules between gmt and est with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -60,7 +60,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">London (GMT/BST) to Eastern Time (ET) Converter</h1>
+        <h1 id="page-title">Current London (GMT/BST) to Eastern Time (ET) Time Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between London (GMT/BST)
             and Eastern Time (ET).</p>
 
