--- a/time-zone/jst-to-pst/index.html
+++ b/time-zone/jst-to-pst/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Japan Standard Time (JST) to Pacific Time (PT) Converter – Live Time Zone Comparison</title>
+    <title>Current Japan Standard Time (JST) to Pacific Time (PT) Converter (2026) | Time Zone Comparison</title>
     <meta name="description"
         content="Convert Japan Standard Time (JST) to Pacific Time (PT) instantly. Compare schedules between jst and pst with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -60,7 +60,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Japan Standard Time (JST) to Pacific Time (PT) Converter</h1>
+        <h1 id="page-title">Current Japan Standard Time (JST) to Pacific Time (PT) Time Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Japan Standard Time (JST)
             and Pacific Time (PT).</p>
 
