--- a/time-zone/mt-to-gmt/index.html
+++ b/time-zone/mt-to-gmt/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mountain Time (MT) to London (GMT/BST) Converter – Live Time Zone Comparison</title>
+    <title>Current Mountain Time (MT) to London (GMT/BST) Converter (2026) | Time Zone Comparison</title>
     <meta name="description"
         content="Convert Mountain Time (MT) to London (GMT/BST) instantly. Compare schedules between mt and gmt with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -60,7 +60,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Mountain Time (MT) to London (GMT/BST) Converter</h1>
+        <h1 id="page-title">Current Mountain Time (MT) to London (GMT/BST) Time Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Mountain Time (MT)
             and London (GMT/BST).</p>
 
