--- a/crypto/sol-to-usd/index.html
+++ b/crypto/sol-to-usd/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Solana to US Dollars Portfolio Tracker – Convert SOL to USD</title>
+    <title>Live Solana to US Dollars Portfolio Tracker (2026) | Crypto Converter</title>
     <meta name="description"
         content="Track your Solana (SOL) investments. Convert SOL to US Dollars (USD) and calculate exact historic profit and loss instantly." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -85,7 +85,7 @@
         </div>
     </header>
     <main class="container">
-        <h1>Solana to US Dollars Tracker</h1>
+        <h1>Live Solana to US Dollars Crypto Tracker</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Calculate historic profit and loss for
             SOL to USD.</p>
 
