--- a/currency/chf-to-eur/index.html
+++ b/currency/chf-to-eur/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
-    <title>Convert CHF to EUR – Live Exchange Rate Calculator</title>
+    <title>Live CHF to EUR Exchange Rate (2026) | Convert Swiss Francs</title>
     <meta name="description"
         content="Convert Swiss Francs (CHF) to Euros (EUR) instantly with live exchange rates. Fast & free currency converter." />
     <link rel="stylesheet" href="/style.css" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Convert Swiss Francs to Euros Instantly</h1>
+        <h1 id="page-title">Live Swiss Francs to Euros Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live CHF to EUR exchange
             rate calculator.</p>
 
