--- a/currency/dkk-to-usd/index.html
+++ b/currency/dkk-to-usd/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
-    <title>Convert DKK to USD – Live Exchange Rate Calculator</title>
+    <title>Live DKK to USD Exchange Rate (2026) | Convert Danish Kroner</title>
     <meta name="description"
         content="Convert Danish Kroner (DKK) to US Dollars (USD) instantly with live exchange rates. Fast & free currency converter." />
     <link rel="stylesheet" href="/style.css" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Convert Danish Kroner to US Dollars Instantly</h1>
+        <h1 id="page-title">Live Danish Kroner to US Dollars Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live DKK to USD exchange
             rate calculator.</p>
 
