--- a/currency/eur-to-chf/index.html
+++ b/currency/eur-to-chf/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
-    <title>Convert EUR to CHF – Live Exchange Rate Calculator</title>
+    <title>Live EUR to CHF Exchange Rate (2026) | Convert Euros</title>
     <meta name="description"
         content="Convert Euros (EUR) to Swiss Francs (CHF) instantly with live exchange rates. Fast & free currency converter." />
     <link rel="stylesheet" href="/style.css" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Convert Euros to Swiss Francs Instantly</h1>
+        <h1 id="page-title">Live Euros to Swiss Francs Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live EUR to CHF exchange
             rate calculator.</p>
 
