--- a/currency/usd-to-nzd/index.html
+++ b/currency/usd-to-nzd/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
-    <title>Convert USD to NZD – Live Exchange Rate Calculator</title>
+    <title>Live USD to NZD Exchange Rate (2026) | Convert US Dollars</title>
     <meta name="description"
         content="Convert US Dollars (USD) to New Zealand Dollars (NZD) instantly with live exchange rates. Fast & free currency converter." />
     <link rel="stylesheet" href="/style.css" />
@@ -76,7 +76,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Convert US Dollars to New Zealand Dollars Instantly</h1>
+        <h1 id="page-title">Live US Dollars to New Zealand Dollars Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Live USD to NZD exchange
             rate calculator.</p>
 
