--- a/time-code/convert-cest-to-local-time/index.html
+++ b/time-code/convert-cest-to-local-time/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-    <title>Convert CEST to Local Time – Central European Summer Time Translator</title>
-    <meta name="description"
-        content="Paste a time abbreviation like '2pm CEST' and convert Central European Summer Time (CEST) to your local time instantly." />
+    <title>Translate CEST to Local Time (2026) | Central European Summer Time Converter</title>
+    content="Paste a time abbreviation like '2pm CEST' and convert Central European Summer Time (CEST) to your local time instantly."
+    />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -61,7 +61,7 @@
     </header>
     <main>
         <div class="card">
-            <h1 id="page-title">Convert CEST to Local Time</h1>
+            <h1 id="page-title">Latest CEST to Local Time Converter</h1>
             <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Smart Central European Summer Time (CEST) natural
                 language translator.</p>
 
