--- a/time-zone/pst-to-ist/index.html
+++ b/time-zone/pst-to-ist/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Pacific Time (PT) to India Standard Time (IST) Converter – Live Time Zone Comparison</title>
+    <title>Current Pacific Time (PT) to India Standard Time (IST) Converter (2026) | Time Zone Comparison</title>
     <meta name="description"
         content="Convert Pacific Time (PT) to India Standard Time (IST) instantly. Compare schedules between pst and ist with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -60,7 +60,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Pacific Time (PT) to India Standard Time (IST) Converter</h1>
+        <h1 id="page-title">Current Pacific Time (PT) to India Standard Time (IST) Time Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Pacific Time (PT)
             and India Standard Time (IST).</p>
 
