--- a/time-zone/sgt-to-pst/index.html
+++ b/time-zone/sgt-to-pst/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Singapore Time (SGT) to Pacific Time (PT) Converter – Live Time Zone Comparison</title>
+    <title>Current Singapore Time (SGT) to Pacific Time (PT) Converter (2026) | Time Zone Comparison</title>
     <meta name="description"
         content="Convert Singapore Time (SGT) to Pacific Time (PT) instantly. Compare schedules between sgt and pst with exact time differences." />
     <meta name="google-adsense-account" content="ca-pub-6293439009227714">
@@ -60,7 +60,7 @@
     </header>
     <!-- Main Content -->
     <main class="container">
-        <h1 id="page-title">Singapore Time (SGT) to Pacific Time (PT) Converter</h1>
+        <h1 id="page-title">Current Singapore Time (SGT) to Pacific Time (PT) Time Converter</h1>
         <p class="subtitle" style="text-align: center; margin-bottom: 32px;">Instantly compare times between Singapore Time (SGT)
             and Pacific Time (PT).</p>
 
